# raspi-ruxpin

./: .env.example  .env.example.mac  .env.example.pi  .gitignore  .pylintrc  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_STEPS.md  QUICKSTART.md  README.md  TEST_RESULTS.md  TROUBLESHOOTING.md  blink.py  close-all.py  index.html  main.cfg.default  main.py  open-all.py  phrases.py  pig.py  puppet.py  pwmtest.py  pyproject.toml  pytest.ini  raspi-ruxpin.fzz  raspi-ruxpin.service  test.py  testAudio.py  threadTest.py  waveTest.py  webTest.py
backend/: __init__.py  config.py  dependencies.py  logging_config.py  main.py
backend/api/: __init__.py  websocket.py
backend/api/endpoints/: __init__.py  health.py
backend/core/: __init__.py  enums.py  exceptions.py
backend/hardware/: __init__.py  audio_player.py  gpio_manager.py  mock_gpio.py  models.py  servo.py
backend/services/: __init__.py  bear_service.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_gpio_manager.py  test_servo.py
backend/tests/integration/: __init__.py  test_api.py  test_bear_service.py
config/: main.cfg.default  phrases.json
docs/: IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PIPER_SETUP.md  TROUBLESHOOTING.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: BearVisualization.vue  ConfigMode.vue  ControlMode.vue  GPIOStatus.vue  LogViewer.vue  PuppetMode.vue  SpeakMode.vue  StatusBar.vue
frontend/src/composables/: useBear.ts  useWebSocket.ts
frontend/src/types/: api.ts  bear.ts  websocket.ts
lib/: audioPlayer.py  audio_player.py  bear.py  direction.py  gpio.py  mockAudioPlayer.py  mockBear.py  mockServo.py  pin_set.py  servo.py  state.py  webFramework.py  webPuppet.py  webServer.py
mock/: audioPlayer.py  bear.py  servo.py
public/css/: main.css
public/js/: app.js  ui.js
scripts/: deploy.sh  generate_5_states_clean.py  generate_eye_states.py  setup-dev.sh  setup-service.sh
templates/: index.html  index.tpl  naughty.tpl  puppet.tpl
